--- a/index.html
+++ b/index.html
@@ -16,8 +16,21 @@
     </header>
 
     <section class="content">
-        <h2>Hello!</h2>
-        <p>This is a simple portfolio page.</p>
+        <h2>Halo!</h2>
+        <p>Ini adalah halaman portofolio sederhana dengan tampilan yang sudah diperbarui.</p>
+        <div class="card">
+            <h3>Projek Saya</h3>
+            <p>Di sini kamu bisa menampilkan hasil kerja atau tugas kampus.</p>
+        </div>
+
+        <div class="card">
+            <h3>Skills</h3>
+            <ul>
+                <li>HTML, CSS</li>
+                <li>JavaScript</li>
+                <li>UI/UX Design</li>
+            </ul>
+        </div>
     </section>
 </body>
 </html>
