--- a/about.html
+++ b/about.html
@@ -15,9 +15,13 @@
         </nav>
     </header>
 
-    <section class="content">
-        <h2>Who am I?</h2>
-        <p>This page gives a short description about me.</p>
-    </section>
+   <section class="content">
+       <h2>Siapa saya?</h2>
+       <p>Saya seorang pelajar yang berkuliah di UNIKA SOEGIJAPRANATA</p>
+       <div class="card">
+           <h3>Profil Singkat</h3>
+           <p>Saya seorang mahasiswa yang tertarik pada teknologi, desain, dan membuat berbagai proyek.</p>
+       </div>
+   </section>
 </body>
 </html>
